--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "element-plus": "^2.9.1",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0",
     "vue": "^3.0.4",
     "vue-router": "^4.5.0",
-    "vuetify": "^3.7.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
