--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "concurrently": "^9.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "cron": "^3.3.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "mysql2": "^3.11.5",
+    "mysqldump": "^3.2.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
   }
